; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_geometry.c_fz_expand_rect.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_geometry.c_fz_expand_rect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { float, float, float, float }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local { <2 x float>, <2 x float> } @fz_expand_rect(<2 x float> %0, <2 x float> %1, float %2) #0 {
  %4 = alloca %struct.TYPE_5__, align 4
  %5 = alloca %struct.TYPE_5__, align 4
  %6 = alloca float, align 4
  %7 = bitcast %struct.TYPE_5__* %5 to { <2 x float>, <2 x float> }*
  %8 = getelementptr inbounds { <2 x float>, <2 x float> }, { <2 x float>, <2 x float> }* %7, i32 0, i32 0
  store <2 x float> %0, <2 x float>* %8, align 4
  %9 = getelementptr inbounds { <2 x float>, <2 x float> }, { <2 x float>, <2 x float> }* %7, i32 0, i32 1
  store <2 x float> %1, <2 x float>* %9, align 4
  store float %2, float* %6, align 4
  %10 = bitcast %struct.TYPE_5__* %5 to { <2 x float>, <2 x float> }*
  %11 = getelementptr inbounds { <2 x float>, <2 x float> }, { <2 x float>, <2 x float> }* %10, i32 0, i32 0
  %12 = load <2 x float>, <2 x float>* %11, align 4
  %13 = getelementptr inbounds { <2 x float>, <2 x float> }, { <2 x float>, <2 x float> }* %10, i32 0, i32 1
  %14 = load <2 x float>, <2 x float>* %13, align 4
  %15 = call i64 @fz_is_infinite_rect(<2 x float> %12, <2 x float> %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %3
  %18 = bitcast %struct.TYPE_5__* %4 to i8*
  %19 = bitcast %struct.TYPE_5__* %5 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %18, i8* align 4 %19, i64 16, i1 false)
  br label %39

20:                                               ; preds = %3
  %21 = load float, float* %6, align 4
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 0
  %23 = load float, float* %22, align 4
  %24 = fsub float %23, %21
  store float %24, float* %22, align 4
  %25 = load float, float* %6, align 4
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 1
  %27 = load float, float* %26, align 4
  %28 = fsub float %27, %25
  store float %28, float* %26, align 4
  %29 = load float, float* %6, align 4
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 2
  %31 = load float, float* %30, align 4
  %32 = fadd float %31, %29
  store float %32, float* %30, align 4
  %33 = load float, float* %6, align 4
  %34 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 3
  %35 = load float, float* %34, align 4
  %36 = fadd float %35, %33
  store float %36, float* %34, align 4
  %37 = bitcast %struct.TYPE_5__* %4 to i8*
  %38 = bitcast %struct.TYPE_5__* %5 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %37, i8* align 4 %38, i64 16, i1 false)
  br label %39

39:                                               ; preds = %20, %17
  %40 = bitcast %struct.TYPE_5__* %4 to { <2 x float>, <2 x float> }*
  %41 = load { <2 x float>, <2 x float> }, { <2 x float>, <2 x float> }* %40, align 4
  ret { <2 x float>, <2 x float> } %41
}

declare dso_local i64 @fz_is_infinite_rect(<2 x float>, <2 x float>) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
